error_log.txt
    Checking ifc-parser-wasm v0.1.0 (C:\Users\lucas\Desktop\web-bim-vis\ifc-parser-wasm)
warning: unused import: `Deserialize`
 --> src\lib.rs:2:24
  |
2 | use serde::{Serialize, Deserialize};
  |                        ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
   --> src\lib.rs:46:34
    |
46  |     let _ = bimifc_parser::parse(data);
    |             -------------------- ^^^^ expected `&str`, found `&[u8]`
    |             |
    |             arguments to this function are incorrect
    |
    = note: expected reference `&str`
               found reference `&[u8]`
note: function defined here
   --> C:\Users\lucas\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\bimifc-parser-0.2.0\src\lib.rs:121:8
    |
121 | pub fn parse(content: &str) -> Result<Arc<dyn IfcModel>> {
    |        ^^^^^

warning: unused variable: `canvas_id`
 --> src\lib.rs:5:20
  |
5 | pub fn init_webgpu(canvas_id: &str) {
  |                    ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_canvas_id`
  |
  = note: `#[warn(unused_variables)]` on by default

For more information about this error, try `rustc --explain E0308`.
warning: `ifc-parser-wasm` (lib) generated 2 warnings
error: could not compile `ifc-parser-wasm` (lib) due to 1 previous error; 2 warnings emitted
